overflow fixes

--- a/css/style.scss
+++ b/css/style.scss
@@ -27,14 +27,14 @@ img {
 
 // Header
 .header{
-    
+    background: transparent;
     width: 100%;
     padding:1em 2em;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 2em;
-    overflow-x: hidden;
+    overflow: hidden;
 
     .logo {
         width: 88px;
@@ -49,7 +49,7 @@ img {
     display: flex;
     flex-wrap: wrap;
     position: relative;
-    overflow-x: hidden;
+    overflow: hidden;
 
     .hero-text {
         width: 100%;
@@ -177,7 +177,7 @@ img {
     padding: 1.5em;
     justify-content: center;
     align-items: center;
-    overflow-x: hidden;
+    overflow: hidden;
     
 
     .benefits-heading {
@@ -309,7 +309,7 @@ img {
     flex-wrap: wrap;
     padding: 1.5em 1.1em;
     background: #F2F8FF;
-    overflow-x: hidden;
+    overflow: hidden;
 
     .footer-row-1 {
         width: 100%;
